	2017-11-19 Igor Tyukalov <tyukalov@bk.ru>

	* Полностью пересмотрен интерфейс. Теперь функция argparse вызывается
	с единственным аргументом - структурой ARGPARSE_ARG, а возвращает
	структуру OPTARG. Подробность см. в документации (на данный момент
	отсутствует) или в исходниках.

	2017-11-22 Igor Tyukalov <tyukalov@bk.ru>
	* Реализованы три флага параметров для опций - отсутствующий (NONE),
	обязательный (REQUIRED)  и необязательный (OPTIONAL).
	* Исправлены различные ошибки

	2017-12-01 Igor Tyukalov <tyukalov@bk.ru>
	* Добавлена man-страница для функции argparse
	* Переименованы некоторые константы, которые могли вызвать конфликт имён.
	* Добавлена функция findopt.

	2017-12-02 Igor Tyukalov <tyukalov@bk.ru>
	* Добавлены man-страницы для функций findopt и argclean.